[package]
name = "ros"
version = "0.1.0"
authors = ["theli"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"

bevy_log = "0.5"
bevy_core = "0.5"
bevy_transform = "0.5"
bevy_diagnostic = "0.5"
bevy_input = "0.5"
bevy_window = "0.5"
bevy_asset = "0.5"
bevy_scene = "0.5"
bevy_render = "0.5"
bevy_sprite = "0.5"
bevy_pbr = "0.5"
bevy_ui = "0.5"
bevy_text = "0.5"
bevy_audio = "0.5"
bevy_gilrs = "0.5"
bevy_gltf = "0.5"
bevy_winit = "0.5"
bevy_wgpu = "0.5"

glam = "0.13.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1